Fix content jump on vertical scroll bar show/hide
- Center based on vw (which includes scroll bars)

--- a/styles/app.css
+++ b/styles/app.css
@@ -25,12 +25,16 @@ body {
   -webkit-text-size-adjust: none;
   -moz-text-size-adjust: none;
   -ms-text-size-adjust: none;
+
+  /*required for IE/Edge to be compatible with left:50vw & transform:translate(-50%, 0),
+  otherwise there is a phantom div on the right side of the screen (from the left:50vw),
+  that the window will scroll to*/
+  overflow-x: hidden;
 }
 
 /*root div in index.html*/
 #root {
   min-height: 100vh;
-  min-width: 100vw;
   background-color: #F0F0F0;
 }
 
@@ -38,8 +42,26 @@ body {
 #root > div {
   min-width: 34vw;
   max-width: 500px;
-  margin: auto;
-  padding: 3vh 3vw 12vh 3vw;
+  padding: 3vh 0 12vh 0;
+
+  /*center based on vw to prevent content jump when vertical scroll bar show/hide
+  note: vw/vh include the width of scroll bars*/
+  position: relative;
+  left: 50vw;
+  -webkit-transform: translate(-50%, 0);
+  -moz-transform: translate(-50%, 0);
+  -ms-transform: translate(-50%, 0);
+  -o-transform: translate(-50%, 0);
+  transform: translate(-50%, 0);
+}
+
+/*use responsive max-width to simulate padding/margin to allow
+space for vertical scroll bar without creating horizontal scroll bar
+(if there is padding, the window will scroll horizontally to show the padding) */
+@media (max-width: 540px) {
+  #root > div {
+    max-width: calc(100vw - 40px);
+  }
 }
 
 /*links*/
@@ -76,7 +98,7 @@ li:before {
 
 /*title*/
 h1 {
-  font-size: 22px;
+  font-size: 20px;
   margin-bottom: 0.5vh;
 }
 
